improve gui appearance